--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,22 +2,24 @@
 buildscript {
     repositories {
         jcenter()
+        maven { url 'https://jitpack.io' }
+        maven { url "https://maven.google.com" }
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:3.1.3'
     }
 }
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
@@ -28,9 +30,12 @@ android {
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
+    maven { url "https://maven.google.com" }
 }
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
+    compile 'com.github.adrielcafe:AndroidAudioRecorder:0.3.0'
+    implementation 'com.karumi:dexter:5.0.0'
 }
-  
