--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "name": "react-native-voice-recorder",
-  "version": "0.0.3",
+  "version": "1.0.0",
   "description": "React Native: Native Voice Recorder",
   "main": "RNVoiceRecorder.js",
+  "homepage": "https://github.com/prscX/react-native-voice-recorder.git",
   "repository": {
     "type": "git",
     "url": "https://github.com/prscX/react-native-voice-recorder.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "node ../pod-installer/index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "react-native"
   ],
   "author": "Pranav Raj Singh Chauhan",
   "dependencies": {
-    "pod-installer": "0.0.0"
   },
   "devDependencies": {
     "prettier-pack": "0.0.8"
